[gd_scene load_steps=2 format=3 uid="uid://dgo7v2i3mbmtb"]

[ext_resource type="Script" path="res://main.gd" id="1_qjk75"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjk75")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="LineEditFilterName" type="LineEdit" parent="."]
layout_mode = 1
offset_left = 96.0
offset_top = 296.0
offset_right = 208.0
offset_bottom = 331.0
placeholder_text = "N: Name"

[node name="LineEditFilterLang" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 224.0
offset_top = 296.0
offset_right = 336.0
offset_bottom = 331.0
placeholder_text = "L: Language"

[node name="Label" type="Label" parent="LineEditFilterLang"]
layout_mode = 0
offset_left = -208.0
offset_right = -144.0
offset_bottom = 32.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "Filter:"

[node name="Tree" type="Tree" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 352.0
offset_right = 336.0
offset_bottom = 644.0
focus_mode = 0
columns = 2

[node name="ButtonDemo" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 72.0
offset_right = 336.0
offset_bottom = 107.0
focus_mode = 0
text = "H: How to use"

[node name="ButtonFullscreen" type="Button" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 128.0
offset_right = 160.0
offset_bottom = 160.0
focus_mode = 0
toggle_mode = true
text = "F: Fullscreen"

[node name="ButtonOnTop" type="Button" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 184.0
offset_right = 160.0
offset_bottom = 219.0
focus_mode = 0
toggle_mode = true
text = "T: Always on Top"

[node name="ButtonFolder" type="Button" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 72.0
offset_right = 160.0
offset_bottom = 107.0
focus_mode = 0
text = "O: Open Folder"

[node name="ButtonIntSpeak" type="Button" parent="."]
layout_mode = 1
offset_left = 192.0
offset_top = 128.0
offset_right = 336.0
offset_bottom = 163.0
focus_mode = 0
text = "R: Interrupt"

[node name="ButtonStop" type="Button" parent="."]
layout_mode = 1
offset_left = 192.0
offset_top = 240.0
offset_right = 336.0
offset_bottom = 275.0
focus_mode = 0
text = "S/Esc: Stop"

[node name="ButtonToggle" type="Button" parent="."]
layout_mode = 1
offset_left = 192.0
offset_top = 184.0
offset_right = 336.0
offset_bottom = 219.0
focus_mode = 0
text = "Space: Speak"

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 240.0
offset_right = 160.0
offset_bottom = 275.0
focus_mode = 0

[node name="CharsLabel" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 896.0
offset_top = 528.0
offset_right = 1152.0
offset_bottom = 568.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]0 chars (0)[/center]"
scroll_active = false

[node name="LinesLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 592.0
offset_right = 1152.0
offset_bottom = 632.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]0 lines (0)[/center]"
scroll_active = false

[node name="HSliderRate" type="HSlider" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 8.0
offset_right = 416.0
offset_bottom = 24.0
max_value = 2.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="HSliderRate"]
layout_mode = 0
offset_left = -64.0
offset_top = -8.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "Z: Rate:"
vertical_alignment = 1

[node name="Value" type="Label" parent="HSliderRate"]
layout_mode = 1
offset_left = 160.0
offset_top = -8.0
offset_right = 224.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "1.00x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSliderPitch" type="HSlider" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 8.0
offset_right = 736.0
offset_bottom = 24.0
max_value = 2.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="HSliderPitch"]
layout_mode = 1
offset_left = -64.0
offset_top = -8.0
offset_right = -2.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "X: Pitch:"
vertical_alignment = 1

[node name="Value" type="Label" parent="HSliderPitch"]
layout_mode = 1
offset_left = 160.0
offset_top = -8.0
offset_right = 224.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "1.00x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSliderVolume" type="HSlider" parent="."]
layout_mode = 0
offset_left = 896.0
offset_top = 8.0
offset_right = 1056.0
offset_bottom = 24.0
value = 50.0

[node name="Label" type="Label" parent="HSliderVolume"]
layout_mode = 1
offset_left = -96.0
offset_top = -8.0
offset_right = -14.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "C: Volume:"
vertical_alignment = 1

[node name="Value" type="Label" parent="HSliderVolume"]
layout_mode = 1
offset_left = 160.0
offset_top = -8.0
offset_right = 224.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "50%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Utterance" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 72.0
offset_right = 896.0
offset_bottom = 644.0
placeholder_text = "Welcome to Clipboard Narrator.

Press Ctrl-C anywhere to start text to speech. Copy 1 word to stop.
Tab or Shift-Tab to change modes. Shift to increase slider speed.
Enter & Escape to focus and unfocus text editor. \"U\" to focus speech."
wrap_mode = 1
draw_spaces = true

[node name="Log" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 912.0
offset_top = 72.0
offset_right = 1136.0
offset_bottom = 516.0
focus_mode = 0
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="ButtonClearLog" type="Button" parent="Log"]
clip_contents = true
layout_mode = 0
offset_right = 224.0
offset_bottom = 35.0
focus_mode = 0
text = "Y: Clear/Save"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 32.0
focus_mode = 0
edit_alpha = false

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 32.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
text = "Waiting for input..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 37.0
offset_right = 1152.0
offset_bottom = 64.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 1
bbcode_enabled = true
scroll_active = false

[connection signal="text_changed" from="LineEditFilterName" to="." method="_on_line_edit_filter_name_text_changed"]
[connection signal="text_changed" from="LineEditFilterLang" to="." method="_on_line_edit_filter_name_text_changed"]
[connection signal="pressed" from="ButtonDemo" to="." method="_on_button_demo_pressed"]
[connection signal="pressed" from="ButtonFullscreen" to="." method="_on_button_fullscreen_pressed"]
[connection signal="pressed" from="ButtonOnTop" to="." method="_on_button_on_top_pressed"]
[connection signal="pressed" from="ButtonFolder" to="." method="_on_button_folder_pressed"]
[connection signal="pressed" from="ButtonIntSpeak" to="." method="_on_button_int_speak_pressed"]
[connection signal="pressed" from="ButtonStop" to="." method="_on_button_stop_pressed"]
[connection signal="pressed" from="ButtonToggle" to="." method="_on_button_toggle_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="value_changed" from="HSliderRate" to="." method="_on_h_slider_rate_value_changed"]
[connection signal="value_changed" from="HSliderPitch" to="." method="_on_h_slider_pitch_value_changed"]
[connection signal="value_changed" from="HSliderVolume" to="." method="_on_h_slider_volume_value_changed"]
[connection signal="text_set" from="Log" to="." method="_on_log_text_set"]
[connection signal="pressed" from="Log/ButtonClearLog" to="." method="_on_button_clear_log_pressed"]
[connection signal="color_changed" from="ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="focus_entered" from="RichTextLabel" to="." method="_on_rich_text_label_focus_entered"]
[connection signal="focus_exited" from="RichTextLabel" to="." method="_on_rich_text_label_focus_exited"]
